--- a/ui.apps/src/main/content/jcr_root/apps/anf-code-challenge/components/custom/addauthor/addauthor.html
+++ b/ui.apps/src/main/content/jcr_root/apps/anf-code-challenge/components/custom/addauthor/addauthor.html
@@ -1,6 +1,7 @@
 <sly data-sly-use.clientlib="/libs/granite/sightly/templates/clientlib.html">
     <sly data-sly-call="${clientlib.all @ categories='anf.components.addauthor'}"/>
 </sly>
+
 <!-- Excercise 1 #Keshav -->
 <div class="row clearfix">
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -11,13 +12,13 @@
                 </h2>
             </div>
             <div class="body">
-                <form class="user" method="POST" enctype="multipart/form-data" action="/bin/saveUserDetails">
+                <form name="myForm" class="user" method="POST" enctype="multipart/form-data" action="/bin/saveUserDetails">
                     <div class="row clearfix">
                         <div class="col-sm-6">
                             <div class="form-group form-float form-group-lg">
                                 <div class="form-line">
                                     <label class="form-label">First Name</label>
-                                    <input type="text" name="fname" class="form-control" />
+                                    <input type="text" name="fname" class="form-control" required />
                                 </div>
                             </div>
                         </div>
@@ -25,7 +26,7 @@
                             <div class="form-group form-float form-group-lg">
                                 <div class="form-line">
                                     <label class="form-label">Last Name</label>
-                                    <input type="text" name="lname" class="form-control" />
+                                    <input type="text" name="lname" class="form-control" required />
                                 </div>
                             </div>
                         </div>
@@ -33,7 +34,7 @@
                             <div class="form-group form-float form-group-lg">
                                 <div class="form-line">
                                     <label class="form-label">Age</label>
-                                    <input type="text" name="age" class="form-control" />
+                                    <input type="text" name="age" class="form-control" required />
 
                                 </div>
                             </div>
